<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/bg" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/font"
        android:text="Nhóm II Tank Game"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <ToggleButton
        android:id="@+id/btn_sound"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/toogle_volume_selector"
        android:padding="10dp"
        android:textOff=""
        android:textOn="" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/start"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/font"
            android:background="@drawable/button_background"
            android:text="@string/new_play" />
        <Button
            android:id="@+id/ops"
            android:layout_width="300dp"
            android:textSize="20sp"
            android:fontFamily="@font/font"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/setting"/>

        <Button
            android:id="@+id/score"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:fontFamily="@font/font"
            android:text="@string/high_score"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>