<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/bg" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="428dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="71dp"
            android:text="@string/setting"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:fontFamily="@font/font"
            android:textSize="50sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/textView4"
                android:layout_height="wrap_content"
                android:text="@string/sound"
                android:fontFamily="@font/font"
                android:gravity="end"
                android:textColor="#ffffff"
                android:textSize="20sp"/>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="20sp"
                    android:thumb="@drawable/switch_custom_thumb_selector"
                    android:track="@drawable/switch_custom_track_selector"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Hiệu ứng âm thanh"
                android:fontFamily="@font/font"
                android:gravity="end"
                android:textColor="#ffffff"
                android:textSize="20sp"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="20sp"
                    android:thumb="@drawable/switch_custom_thumb_selector"
                    android:track="@drawable/switch_custom_track_selector"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </RelativeLayout>
        </LinearLayout>


        <Button
            android:id="@+id/back"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:fontFamily="@font/font"
            android:layout_gravity="center"
            android:text="@string/back"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />
    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>
